tests/core/ill-typed/unexpected-type-for-expression/function-mismatch.stella
// sample program in Stella Core
language core;

fn increment_twice(n : Nat) -> Nat {
  return succ(succ(n));
}

fn main(n : Nat) -> Bool {
  return increment_twice(n);
}

